
Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
------------------------------

Apache Solr integration 7.x-1.0-xxxx, 2011-xx-xx
------------------------------
#1340552 by pwolanin: Make facet generation more flexible/overrideable.
#1341840 by pwolanin: Fix for undefined index 'core_search' while running tests.
#1271964 by Nick_vh | wmostrey: Fix for no way to delete content recommendation blocks.
#1314406 by Nick_vh, scor: Fixed De-duplication of the apachesolr_search_execute() and apachesolr_search_user_defined_search_page().
#1161538 by Nick_vh, pwolanin | domidc: Fixed The numeric field id should not be used for Solr index field names.
#1333904 by Nick_vh | vrc3: Restore flexible 'results per page' option.
#1161444 by Nick_vh | cpliakas: Modify Facet API field definitions to reflect API change for the 'query type" key.
#1334216 by Nick_vh: Fixed Convert all static parameters to drupal_static().
#1328854 by Josh Waihi: Added Tag cron database queries to allow modules to alter conditions of updating index table.
#1323758 by Nick_vh | Frippuz: Fixed hook_apachesolr_process_results() make no impact on results.
#1265124 by InternetDevels.Com: Fixed Not output pager in search results.
#1324842 by Nick_vh: Added setAvailableSorts to the api.
#1000532 by craigmc, jpmckinney: Fixed Non-current/valid Node Types not excluded from index.
#1320906 by Nick_vh | brianV: Fixed Taxonomy Search page title should be dynamic based on term.
#1320076 by Nick_vh | egarias: Fixed Results per page should be non-negative integer less than 200.
#1320634 by Nick_vh | jummonk: Fixed Search pages saved in static array before they are created in DB => PDO exception on creation of menu_router() records.
#1319542 by jgalletta: Fixed Undefined index: get in apachesolr_search_user_defined_search_form_submit().
#1313698 by Nick_vh, denikin: Fixed Support for search of date content in facets/fields