@@ -4,6 +4,7 @@ Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.0-xxxx, 2011-xx-xx
 ------------------------------
+#1341854 by pwolanin: Pass the query object into hooks altering search results.
 #1340552 by pwolanin: Make facet generation more flexible/overrideable.
 #1341840 by pwolanin: Fix for undefined index 'core_search' while running tests.
 #1271964 by Nick_vh | wmostrey: Fix for no way to delete content recommendation blocks.
